--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
 spring.application.name=notes
-server.port=8080
-java.runtime.version=23
-# Datos de la base de datos en Render
-spring.datasource.url= ${DATABASE_URL}
+spring.datasource.url=jdbc:postgresql://dpg-ctcuiei3esus73bmsagg-a:5432/webdajngo_postgresql
+spring.datasource.username=webdajngo_postgresql_user
+spring.datasource.password=5zgb6SK0CIrDY3LsUmNC9Jo1AE77XNIB
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=update
+
+#java.runtime.version=23
+# Datos de la base de datos en Render
+
+#spring.datasource.url= ${DATABASE_URL}
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
